// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`matches album slider 1`] = `
<div>
  <main
    class="space-y-24"
    style="opacity: 0;"
  >
    <section
      class="mt-18"
      style="opacity: 0; filter: blur(8px); transform: translateY(20px);"
    >
      <div
        class="flex-1"
      >
        <p
          class="text-zinc-600 dark:text-zinc-400"
        >
          These are a few of my favorite albums. You can also find me on
           
          <u>
            <a
              href="https://soundcloud.com/melledj"
              rel="noopener noreferrer"
              target="_blank"
            >
              SoundCloud
            </a>
          </u>
          .
        </p>
      </div>
      <div
        class="overflow-hidden mt-8"
      >
        <div
          class="flex w-max"
          style="gap: 24px; flex-direction: row; transform: none;"
        >
          <img
            alt="Artist - Album"
            class="aspect-square w-[120px] rounded-[4px]"
            src="https://i.scdn.co/image/id"
          />
          <img
            alt="Artist - Album"
            class="aspect-square w-[120px] rounded-[4px]"
            src="https://i.scdn.co/image/id"
          />
        </div>
      </div>
    </section>
  </main>
</div>
`;

exports[`matches animated background 1`] = `
<div>
  <div
    class="z-10"
  />
</div>
`;

exports[`matches code 1`] = `
<div>
  <div>
    <pre
      class="shiki shiki-themes github-light github-dark-high-contrast"
      style="background-color:#fff;--shiki-dark-bg:#000000;color:#000000;--shiki-dark:#000000"
      tabindex="0"
    >
      <code>
        <span
          class="line"
        >
          <span
            style="color:#000000;--shiki-dark:#000000"
          >
            const
          </span>
          <span
            style="color:#000000;--shiki-dark:#000000"
          >
             a
          </span>
          <span
            style="color:#000000;--shiki-dark:#000000"
          >
             =
          </span>
          <span
            style="color:#000000;--shiki-dark:#000000"
          >
             1
          </span>
          <span
            style="color:#000000;--shiki-dark:#000000"
          >
            ;
          </span>
        </span>
      </code>
    </pre>
  </div>
</div>
`;

exports[`matches infinite slider 1`] = `
<div>
  <div
    class="overflow-hidden"
  >
    <div
      class="flex w-max"
      style="gap: 16px; flex-direction: row; transform: none;"
    />
  </div>
</div>
`;

exports[`matches scroll progress 1`] = `
<div>
  <div
    class="inset-x-0 top-0 h-1 origin-left"
    style="transform: scaleX(0);"
  />
</div>
`;

exports[`matches spotlight 1`] = `
<div
  style="position: relative; overflow: hidden;"
>
  <div
    class="pointer-events-none absolute rounded-full bg-[radial-gradient(circle_at_center,var(--tw-gradient-stops),transparent_80%)] blur-xl transition-opacity duration-200 from-zinc-50 via-zinc-100 to-zinc-200 opacity-0"
    style="width: 200px; height: 200px; left: -100px; top: -100px;"
  />
</div>
`;

exports[`matches text effect 1`] = `
<div>
  <p
    style="opacity: 0;"
  >
    <span
      class="sr-only"
    />
    <span
      aria-hidden="true"
      class="inline-block whitespace-pre"
      style="opacity: 0;"
    />
  </p>
</div>
`;

exports[`matches text loop 1`] = `
<div>
  <div
    class="relative inline-block whitespace-nowrap"
  >
    <div
      style="opacity: 1; transform: none;"
    />
  </div>
</div>
`;
